# octopusdetool

./: README.md  make_flatpak.sh  make_macos_dmg.sh  make_windows.bat  pyproject.toml  requirements.txt
.github/workflows/: build-flatpak.yml
octopusdetool/: __init__.py  __main__.py  analysis_view.py  octopusdetool.py  octopusdetool_gui.desktop  octopusdetool_gui.icns  octopusdetool_gui.py  octopusdetool_gui.ui  smartmeter_daten.xlsx  smartmeter_heat_daten.xlsx
scripts/: copy_tk_runtime.py
tests/: test_demo_mode.py  test_excel_template_windows.py  test_tariff_local_time.py
